<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UiActivity.MainActivity"
    >
<data>


</data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Tv_Result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:text="Result = "
                android:textSize="25dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Et_Second_Operand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:gravity="center_horizontal"
                android:hint="Please Enter the Second Operand"
                android:textSize="25dp"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="Undo"
                android:id="@+id/undoButton"
                android:onClick="Undo"
                />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="+"
                android:id="@+id/addition_Button"
                android:onClick="sumListner"
                />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="-"
                android:id="@+id/subtraction_Button"
                android:onClick="subtractionListner" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="*"
                android:id="@+id/multiplication_Button"
                android:onClick="multiplicatioListner"
                />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="/"
                android:id="@+id/division_Button"
                android:onClick="devisionListner"
                />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="="
                android:id="@+id/eqaul_Button"
                android:onClick="equalListner"/>

            <Button
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:text="Redo"
                android:id="@+id/Redp_Button"
                android:onClick="Redo"/>


        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_View_Operation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"

            />


    </LinearLayout>
</layout>
